fix blockquote overflow

--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ blockquote:before {
 }
 blockquote, q {
 	quotes: "«" "»";
+	overflow: hidden;
 }
 
 /* Opacity-Definitions */
@@ -845,13 +846,14 @@ nav#sub {
 .page-content,
 .entry-content,
 .entry-summary {
-/*	margin: 1.5em 0 0; */
 }
 .entry-content h2, .entry-header h1 {
 	clear: none;
 }
+.entry-content p, .entry-content blockquote {
+	float:left;
+}
 .entry-content img {
-	padding: 2em;
 }
 .page-links {
 	clear: both;
